# mmos-erpnext_germany

./: .gitignore  .pre-commit-config.yaml  .prettierrc.json  .releaserc  README.md  app.json  eslint.config.mjs  hooks.py  pyproject.toml
.github/helpers/: apps.json
.github/workflows/: build_image.yml  codeql.yml  linters.yml  pytest.yml  release.yaml
docker/: .env.example  README.md  docker-compose.yaml
erpnext_germany/: api.py  custom_fields.py  hooks.py  install.py  patches.txt  property_setters.py  tasks.py  uninstall.py
erpnext_germany/config/: desktop.py  docs.py
erpnext_germany/custom/: sales.py
erpnext_germany/desktop_icon/: germany.json
erpnext_germany/erpnext_germany/doctype/business_letter/: business_letter.js  business_letter.json  business_letter.py
erpnext_germany/erpnext_germany/doctype/business_letter_template/: business_letter_template.js
erpnext_germany/erpnext_germany/doctype/business_trip/: business_trip.js  business_trip.json  business_trip.py
erpnext_germany/erpnext_germany/doctype/business_trip_accommodation/: business_trip_accommodation.json  business_trip_accommodation.py
erpnext_germany/locale/: de.mo  de.po  main.pot
erpnext_germany/patches/: add_business_trip_to_expense_claim.py  add_tax_exemption_reason_fields.py  dynamic_party_in_vat_id_check.py  import_business_trip_regions.py  move_business_trip_region_data_to_child_table.py  remove_some_employee_property_setters.py  set_business_trip_settings.py
erpnext_germany/utils/: eu_vat.py  test_utils.py
erpnext_germany/workspace_sidebar/: germany.json
(+25 files in other folders)
