[project]
name = "erpnext_germany"
authors = [
    { name = "ALYF GmbH", email = "hallo@alyf.de"}
]
description = "App to hold regional code for Germany, built on top of ERPNext."
requires-python = ">=3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "zeep~=4.3.2",
    "tenacity~=8.2.3",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[project.urls]
Homepage = "https://github.com/alyf-de/erpnext_germany"
Repository = "https://github.com/alyf-de/erpnext_germany.git"
"Bug Reports" = "https://github.com/alyf-de/erpnext_germany/issues"
